# meta-agent-v5.6.0

./: ## Eval-First Mindset.md  .env.example  .gitattributes  .gitignore  AGENTS.md  Agent-1.md  CHANGELOG-SESSION-2026-03-29.md  Canonical-Spec.md  DEVIATION_RECORD.md  Full-Development-Plan.md  Full-Spec.md  LangChat-Expert.md  Makefile  Notes.md  PHASE3_PROGRESS_REPORT.md  ProductIdentity.md  R1.md  R2.md  README.md  Readme.md  VIV.md  Vision.md  agent-2.md  agent-3.md  development-plan-v5.6.0.md  evaluation-analytics-chart-schemas.md  evaluation-evidence-workbench.md  harness-engineer-evaluation-analytics.md  langgraph.json  package-lock.json  pm_validation.py  pm_validation_results.json  preflight_report.json  preflight_report.md  pyproject.toml  replace-optimization-trendline-with-evaluation-analytics-views.md  spec-kickoff-memo.md  technical-specification-v5.6.0-final.md
meta_harness/: .env.example  .gitignore  AD-WEBAPP.md  AD.md  AGENTS.md  ALLOCATED-SKILLS.MD  CHANGELOG.md  DECISIONS.md  Meta-Harness.excalidraw  Readme.md  SME.md  __init__.py  pyproject.toml  spec-kickoff-memo.md  tmp.md
meta_harness/Legacy_Prompts/: Code_Agent_System_Prompt.md  PM_System_Prompt.md  Plan_Writer_System_Prompt.md  Research_Agent_System_Prompt.md
meta_harness/Snapshot/: S_AD.MD  S_DECISIONS.MD
meta_harness/agents/: __init__.py
meta_harness/agents/architect/: __init__.py
meta_harness/agents/developer/: __init__.py
meta_harness/agents/evaluator/: __init__.py
meta_harness/agents/harness_engineer/: __init__.py
meta_harness/docs/: README.md
meta_harness/integrations/: __init__.py
meta_harness/local-docs/: SDK_REFERENCE.md  agent-harness-decision-audit.md  langsmith-capability-audit-plan.md  langsmith-capability-matrix.md  langsmith-cli-sdk-capability-audit.md  langsmith-he-reference.md  langsmith-ids-and-metadata-contract.md  pcg-spec-closure-tickets.md  pcg-state-schema-rewrite-working.md
meta_harness/profiles/: __init__.py
meta_harness/reports/: pcg-state-schema-analysis.md
meta_harness/research_frontend_sdk/: findings_langchain_frontend.md  findings_langsmith_api.md  findings_overview.md  findings_sandbox.md  findings_subagent_streaming.md  findings_todolist.md
meta_harness/schemas/: __init__.py  enums.py  handoff.py  state.py
meta_harness/sme_input/: README.md  SME-Peer-to-Peer.md
meta_harness/tests/: conftest.py
meta_harness/ticket/: README.md
meta_harness/tools/: __init__.py
meta_harness/tui/: __init__.py
(+417 files in other folders)
