[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-agent"
version = "0.1.0"
description = "Local-first meta-agent for building AI agents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.3",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langgraph-sdk>=0.1.0",
    "langgraph-cli[inmem]>=0.4.12",
    "pydantic>=2.0",
    "langsmith",
    "langchain-community>=0.4.0,<0.5.0",
    "python-dotenv>=1.0.0",
    "langchain-anthropic>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "agentevals",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["meta_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "contract: fast invariant tests — no I/O, no model calls",
    "integration: app composition tests — may use tmp_path, mocks",
    "eval: live behavioral tests — requires ANTHROPIC_API_KEY",
    "drift: regression and drift detection tests",
    "slow: tests that take >5s",
]
