[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-harness"
version = "0.1.0"
description = "Multi-agent LLM application for developing, observing, and shipping other LLM applications."
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.12",
    "langchain>=1.2.15",
    "langchain-core>=1.2.26",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langgraph-sdk>=0.3.12",
    "langgraph-cli[inmem]>=0.4.19",
    "langgraph-checkpoint-sqlite",
    "langsmith>=0.7.25",
    "pydantic>=2.12",
    "textual>=3.0",
    "langchain-collapse>=0.1.1",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "agentevals",
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "pyright",
    "ruff",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["meta_harness", "meta_harness.*"]
exclude = ["meta_harness.tests", "meta_harness.tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
